add internal_server to workflows

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -15,7 +15,8 @@ jobs:
             0) component=collector;;
             1) component=notifier;;
             2) component=external_server;;
-            3) component=shared_python;;
+            3) component=internal_server;;
+            4) component=shared_python;;
           esac
           cd components/$component
           python -m venv venv
