--- a/.github/deadpendency.yaml
+++ b/.github/deadpendency.yaml
@@ -24,6 +24,13 @@ additional-dependency-files:
     path: components/external_server/requirements/requirements-dev.in
 
   - type: pip-requirements-txt
+    path: components/internal_server/requirements-base.in
+  - type: pip-requirements-txt
+    path: components/internal_server/requirements.in
+  - type: pip-requirements-txt
+    path: components/internal_server/requirements-dev.in
+
+  - type: pip-requirements-txt
     path: components/shared_python/requirements/requirements-base.in
   - type: pip-requirements-txt
     path: components/shared_python/requirements/requirements.in
