--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -121,16 +121,23 @@ updates:
   schedule:
     interval: daily
     time: "04:00"
-  open-pull-requests-limit: 100
+  open-pull-requests-limit: 10
 
 - package-ecosystem: docker
-  directory: "/components/shared_python"
+  directory: "/components/internal_server"
   schedule:
     interval: daily
     time: "04:00"
   ignore:
     - dependency-name: "python"
       update-types: ["version-update:semver-major", "version-update:semver-minor"]  # Prevent alpha releases, see https://github.com/dependabot/dependabot-core/issues/4643
+  open-pull-requests-limit: 10
+
+- package-ecosystem: pip
+  directory: "/components/internal_server/requirements"
+  schedule:
+    interval: daily
+    time: "04:00"
   open-pull-requests-limit: 100
 
 - package-ecosystem: pip
