--- a/.github/workflows/trivy.yml
+++ b/.github/workflows/trivy.yml
@@ -29,9 +29,12 @@ jobs:
           - component: renderer
             build_path: components/renderer
             docker_file: Dockerfile
-          - component: server
+          - component: external_server
             build_path: components
             docker_file: external_server/Dockerfile
+          - component: internal_server
+            build_path: components
+            docker_file: internal_server/Dockerfile
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
