--- a/components/notifier/Dockerfile
+++ b/components/notifier/Dockerfile
@@ -8,6 +8,7 @@ COPY requirements/requirements-base.txt /requirements-base.txt
 RUN pip install --no-cache-dir --require-hashes -r /requirements-base.txt
 COPY requirements/requirements.txt /requirements.txt
 RUN pip install --no-cache-dir --require-hashes -r /requirements.txt
+RUN pip install --no-cache-dir -r /requirements-internal.txt
 
 FROM python:3.10.4-slim-bullseye
 
