--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -59,6 +59,13 @@ jobs:
           file: components/external_server/Dockerfile
           tags: ictu/quality-time_server:${{ steps.get_version.outputs.version }}
           push: true
+      - name: Push Internal Server to Docker Hub
+        uses: docker/build-push-action@v3.0.0
+        with:
+          context: components
+          file: components/internal_server/Dockerfile
+          tags: ictu/quality-time_internal-server:${{ steps.get_version.outputs.version }}
+          push: true
       - name: Push Frontend to Docker Hub
         uses: docker/build-push-action@v3.0.0
         with:
