fix some quality issues

--- a/components/shared_python/setup.cfg
+++ b/components/shared_python/setup.cfg
@@ -31,6 +31,9 @@ warn_return_any = true
 warn_unreachable = true
 warn_unused_ignores = true
 
+[mypy-bottle]
+ignore_missing_imports = true
+
 [mypy-pymongo]
 ignore_missing_imports = true
 
