--- a/docs/setup.cfg
+++ b/docs/setup.cfg
@@ -13,5 +13,5 @@ warn_return_any = true
 warn_unreachable = true
 warn_unused_ignores = true
 
-[mypy-shared.data_model.*]
+[mypy-shared.*]
 ignore_missing_imports = true
