update docker compose files

--- a/docker/docker-compose.ci.yml
+++ b/docker/docker-compose.ci.yml
@@ -11,7 +11,7 @@ services:
     build: ../components/collector
   notifier:
     build: ../components/notifier
-  server:
+  external_server:
     build:
       context: ../components
       dockerfile: external_server/Dockerfile
@@ -19,6 +19,12 @@ services:
       - LOAD_EXAMPLE_REPORTS=False
     depends_on:
       - ldap
+  internal_server:
+    build:
+      context: ../components
+      dockerfile: internal_server/Dockerfile
+    environment:
+      - LOAD_EXAMPLE_REPORTS=False
   database:
     build: ../components/database
     ports:
