--- a/docker/docker-compose.override.yml
+++ b/docker/docker-compose.override.yml
@@ -7,11 +7,15 @@ services:
   frontend:
     build: ../components/frontend
   collector:
-    build: ../components/collector
+    build:
+      context: ../components
+      dockerfile: collector/Dockerfile
     depends_on:
       - testdata
   notifier:
-    build: ../components/notifier
+    build:
+      context: ../components
+      dockerfile: notifier/Dockerfile
   external_server:
     build:
       context: ../components
