--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -9,36 +9,36 @@ services:
     environment:
       - FRONTEND_HOST=${FRONTEND_HOST:-frontend}
       - FRONTEND_PORT=${FRONTEND_PORT:-5000}
-      - SERVER_HOST=${SERVER_HOST:-server}
+      - SERVER_HOST=${SERVER_HOST:-external_server}
       - SERVER_PORT=${SERVER_PORT:-5001}
     depends_on:
-      - server
+      - external_server
       - frontend
   frontend:
     image: ictu/quality-time_frontend:${QUALITY_TIME_VERSION}
     environment:
       - FRONTEND_PORT=${FRONTEND_PORT:-5000}
     depends_on:
-      - server
+      - external_server
     cap_drop:
       - ALL
   collector:
     image: ictu/quality-time_collector:${QUALITY_TIME_VERSION}
     environment:
-      - SERVER_HOST=${SERVER_HOST:-server}
+      - SERVER_HOST=${SERVER_HOST:-external_server}
       - SERVER_PORT=${SERVER_PORT:-5001}
     depends_on:
-      - server
+      - external_server
     cap_drop:
       - ALL
   notifier:
     image: ictu/quality-time_notifier:${QUALITY_TIME_VERSION}
     environment:
-      - SERVER_HOST=${SERVER_HOST:-server}
+      - SERVER_HOST=${SERVER_HOST:-external_server}
       - SERVER_PORT=${SERVER_PORT:-5001}
       - NOTIFIER_SLEEP_DURATION=60
     depends_on:
-      - server
+      - external_server
     cap_drop:
       - ALL
   external_server:
@@ -61,7 +61,7 @@ services:
   internal_server:
     image: ictu/quality-time_server:${QUALITY_TIME_VERSION}
     environment:
-      - SERVER_PORT=${SERVER_PORT:-5002}
+      - SERVER_PORT=${INTERNAL_SERVER_PORT:-5002}
       - PROXY_HOST=${PROXY_HOST:-www}
       - PROXY_PORT=${PROXY_PORT:-80}
       - DATABASE_URL=mongodb://root:root@database:27017
