--- a/.github/workflows/trivy.yml
+++ b/.github/workflows/trivy.yml
@@ -12,8 +12,8 @@ jobs:
       matrix:
         include:
           - component: collector
-            build_path: components/collector
-            docker_file: Dockerfile
+            build_path: components
+            docker_file: collector/Dockerfile
           - component: database
             build_path: components/database
             docker_file: Dockerfile
@@ -21,8 +21,8 @@ jobs:
             build_path: components/frontend
             docker_file: Dockerfile
           - component: notifier
-            build_path: components/notifier
-            docker_file: Dockerfile
+            build_path: components
+            docker_file: notifier/Dockerfile
           - component: proxy
             build_path: components/proxy
             docker_file: Dockerfile
