--- a/docs/Makefile
+++ b/docs/Makefile
@@ -1,4 +1,4 @@
-# Minimal makefile for Sphinx documentation
+pip# Minimal makefile for Sphinx documentation
 #
 
 # You can set these variables from the command line, and also
