--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -9,8 +9,8 @@ services:
     environment:
       - FRONTEND_HOST=${FRONTEND_HOST:-frontend}
       - FRONTEND_PORT=${FRONTEND_PORT:-5000}
-      - SERVER_HOST=${SERVER_HOST:-external_server}
-      - SERVER_PORT=${SERVER_PORT:-5001}
+      - SERVER_HOST=${EXTERNAL_SERVER_HOST:-external_server}
+      - SERVER_PORT=${EXTERNAL_SERVER_PORT:-5001}
     depends_on:
       - external_server
       - frontend
@@ -25,8 +25,8 @@ services:
   collector:
     image: ictu/quality-time_collector:${QUALITY_TIME_VERSION}
     environment:
-      - SERVER_HOST=${SERVER_HOST:-external_server}
-      - SERVER_PORT=${SERVER_PORT:-5001}
+      - SERVER_HOST=${INTERNAL_SERVER_HOST:-internal_server}
+      - SERVER_PORT=${INTERNAL_SERVER_PORT:-5002}
     depends_on:
       - external_server
     cap_drop:
@@ -34,8 +34,8 @@ services:
   notifier:
     image: ictu/quality-time_notifier:${QUALITY_TIME_VERSION}
     environment:
-      - SERVER_HOST=${SERVER_HOST:-external_server}
-      - SERVER_PORT=${SERVER_PORT:-5001}
+      - SERVER_HOST=${INTERNAL_SERVER_HOST:-internal_server}
+      - SERVER_PORT=${INTERNAL_SERVER_PORT:-5002}
       - NOTIFIER_SLEEP_DURATION=60
     depends_on:
       - external_server
@@ -44,7 +44,7 @@ services:
   external_server:
     image: ictu/quality-time_server:${QUALITY_TIME_VERSION}
     environment:
-      - SERVER_PORT=${SERVER_PORT:-5001}
+      - SERVER_PORT=${EXTERNAL_SERVER_PORT:-5001}
       - DATABASE_URL=mongodb://root:root@database:27017
       - LDAP_URL=ldap://ldap:389
       - LDAP_ROOT_DN=dc=example,dc=org
@@ -62,8 +62,6 @@ services:
     image: ictu/quality-time_server:${QUALITY_TIME_VERSION}
     environment:
       - SERVER_PORT=${INTERNAL_SERVER_PORT:-5002}
-      - PROXY_HOST=${PROXY_HOST:-www}
-      - PROXY_PORT=${PROXY_PORT:-80}
       - DATABASE_URL=mongodb://root:root@database:27017
       - LOAD_EXAMPLE_REPORTS=True
       - FORWARD_AUTH_ENABLED=False
