--- a/docker/docker-compose.override.yml
+++ b/docker/docker-compose.override.yml
@@ -27,6 +27,8 @@ services:
     build:
       context: ../components
       dockerfile: internal_server/Dockerfile
+    ports:
+      - "5002:5002"
   database:
     build: ../components/database
     ports:
