--- a/.github/workflows/sonarcloud.yml
+++ b/.github/workflows/sonarcloud.yml
@@ -53,14 +53,7 @@ jobs:
       run: |
         python -m venv venv
         . venv/bin/activate
-        # Install the requirements and dev requirements in two steps to prevent a version conflict when installing both at the same time:
-        # ERROR: Cannot install urllib3==1.26.8 and urllib3==1.26.9 because these package versions have conflicting dependencies.
-        # The conflict is caused by:
-        #   The user requested urllib3==1.26.9
-        #   The user requested urllib3==1.26.8
-        pip install -r requirements.txt
-        pip install -r requirements-dev.txt
-        pip install -r requirements-internal.txt
+        ci/pip-install.sh
         ci/unittest.sh
         export PYTHONPATH=`python -c 'import sys;print(":".join(sys.argv[1:]))' src $PYTHONPATH`
         python -m xmlrunner --output-file build/unittests.xml
