--- a/components/internal_server/Dockerfile
+++ b/components/internal_server/Dockerfile
@@ -5,12 +5,12 @@ WORKDIR /home/internal_server
 
 RUN python -m venv venv
 ENV PATH="/home/internal_server/venv/bin:$PATH"
-RUN python -m pip install --upgrade pip
-RUN python -m pip install wheel
-COPY internal_server/requirements.txt /requirements.txt
-COPY internal_server/requirements-internal.txt /requirements-internal.txt
-COPY shared_python /home/shared_python/
+COPY internal_server/requirements/requirements-base.txt /requirements-base.txt
+RUN pip install --no-cache-dir --require-hashes -r /requirements-base.txt
+COPY internal_server/requirements/requirements.txt /requirements.txt
 RUN pip install --no-cache-dir --require-hashes -r /requirements.txt
+COPY internal_server/requirements/requirements-internal.txt /requirements-internal.txt
+COPY shared_python /home/shared_python/
 RUN pip install --no-cache-dir -r /requirements-internal.txt
 
 FROM python:3.10.4-slim-bullseye
