Move report_date_time() and md5_hash() to shared python code.

--- a/components/shared_python/setup.cfg
+++ b/components/shared_python/setup.cfg
@@ -36,3 +36,6 @@ ignore_missing_imports = true
 
 [mypy-pymongo.database]
 ignore_missing_imports = true
+
+[mypy-bottle]
+ignore_missing_imports = true
