add internal-server to workflows

--- a/.deepsource.toml
+++ b/.deepsource.toml
@@ -31,6 +31,9 @@ dependency_file_paths = [
   "components/external_server/requirements-base.txt",
   "components/external_server/requirements.txt",
   "components/external_server/requirements-dev.txt",
+  "components/internal_server/requirements-base.txt",
+  "components/internal_server/requirements.txt",
+  "components/internal_server/requirements-dev.txt",
   "components/shared_python/requirements-base.txt",
   "components/shared_python/requirements.txt",
   "components/shared_python/requirements-dev.txt",
