remove unused dev requirements
remove lxml dependency and see what happends

use shared requirements files for gevent and pymongo

pip compile

add pydantic

--- a/components/internal_server/requirements/requirements.in
+++ b/components/internal_server/requirements/requirements.in
@@ -1,4 +1,3 @@
 -r ../../../requirements/bottle.in
--r ../../../requirements/lxml.in
-gevent==21.12.0
-pymongo==4.1.1
+-r ../../../requirements/gevent.in
+-r ../../../requirements/pymongo.in
