--- a/components/external_server/requirements/requirements.in
+++ b/components/external_server/requirements/requirements.in
@@ -1,7 +1,7 @@
 -r ../../../requirements/bottle.in
 -r ../../../requirements/lxml.in
-gevent==21.12.0
-pymongo==4.1.1
+-r ../../../requirements/gevent.in
+-r ../../../requirements/pymongo.in
 ldap3==2.9.1
 requests==2.27.1
 cryptography==36.0.1
