--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -28,7 +28,7 @@ services:
       - INTERNAL_SERVER_HOST=${INTERNAL_SERVER_HOST:-internal_server}
       - INTERNAL_SERVER_PORT=${INTERNAL_SERVER_PORT:-5002}
     depends_on:
-      - server
+      - internal_server
     cap_drop:
       - ALL
   notifier:
