--- a/components/shared_python/setup.cfg
+++ b/components/shared_python/setup.cfg
@@ -15,6 +15,12 @@ package_dir =
     = src
 packages = find:
 python_requires = >=3.10
+install_requires =
+    bottle == 0.12.21
+    packaging == 21.3
+    pymongo == 4.1.1
+    cryptography == 36.0.1
+    pydantic == 1.9.1
 
 [options.packages.find]
 where = src
