--- a/components/proxy/Dockerfile
+++ b/components/proxy/Dockerfile
@@ -5,7 +5,7 @@ LABEL description="Quality-time proxy"
 
 ENV FRONTEND_HOST frontend
 ENV FRONTEND_PORT 5000
-ENV SERVER_HOST server
-ENV SERVER_PORT 5001
+ENV EXTERNAL_SERVER_HOST external_server
+ENV EXTERNAL_SERVER_PORT 5001
 
 COPY *.template /etc/nginx/templates/
