--- a/components/proxy/default.conf.template
+++ b/components/proxy/default.conf.template
@@ -1,4 +1,4 @@
-server {
+external_server {
     add_header      Strict-Transport-Security "max-age=31536000;";
     add_header      X-XSS-Protection "1; mode=block";
     add_header      X-Content-Type-Options "nosniff";
@@ -11,19 +11,19 @@ server {
         proxy_http_version  1.1;
         proxy_read_timeout  24h;
         proxy_set_header    Connection "";
-        proxy_pass          http://${SERVER_HOST}:${SERVER_PORT}/api/v3/nr_measurements;
+        proxy_pass          http://${EXTERNAL_SERVER_HOST}:${EXTERNAL_SERVER_PORT}/api/v3/nr_measurements;
     }
     location /api/v3/datamodel {
         add_header          Cache-Control "no-cache";
-        proxy_pass          http://${SERVER_HOST}:${SERVER_PORT}/api/v3/datamodel;
+        proxy_pass          http://${EXTERNAL_SERVER_HOST}:${EXTERNAL_SERVER_PORT}/api/v3/datamodel;
     }
     location /api/v3/logo {
         add_header          Cache-Control "no-cache";
-        proxy_pass          http://${SERVER_HOST}:${SERVER_PORT}/api/v3/logo;
+        proxy_pass          http://${EXTERNAL_SERVER_HOST}:${EXTERNAL_SERVER_PORT}/api/v3/logo;
     }
     location /api {
         add_header          Cache-Control "no-store";
-        proxy_pass          http://${SERVER_HOST}:${SERVER_PORT}/api;
+        proxy_pass          http://${EXTERNAL_SERVER_HOST}:${EXTERNAL_SERVER_PORT}/api;
     }
     location / {
         add_header          Cache-Control "no-store";
