Add internal server component (#4004)
* initial files copied

* remove unnecessary dependencies

* fix imports

* fix quality

* add internal-server to workflows

* internal dockerfile does not yet exist

* Update components/internal_server/README.md

Co-authored-by: Frank Niessink <frank@niessink.com>

* update sonarcloud workflow

* remove unused dev requirements

remove lxml dependency and see what happends

use shared requirements files for gevent and pymongo

pip compile

add pydantic

* temporarily disable pip-audit

* move shared_python dependencies to setup.cfg

* no -r

* safety check doesn't need requirements.txt anymore

* deadpendency shouldn't analyse shared python dependencies neither

Co-authored-by: Frank Niessink <frank@niessink.com>

--- a/.github/deadpendency.yaml
+++ b/.github/deadpendency.yaml
@@ -24,9 +24,14 @@ additional-dependency-files:
     path: components/external_server/requirements/requirements-dev.in
 
   - type: pip-requirements-txt
-    path: components/shared_python/requirements/requirements-base.in
+    path: components/internal_server/requirements/requirements-base.in
   - type: pip-requirements-txt
-    path: components/shared_python/requirements/requirements.in
+    path: components/internal_server/requirements/requirements.in
+  - type: pip-requirements-txt
+    path: components/internal_server/requirements/requirements-dev.in
+
+  - type: pip-requirements-txt
+    path: components/shared_python/requirements/requirements-base.in
   - type: pip-requirements-txt
     path: components/shared_python/requirements/requirements-dev.in
 
