--- a/.github/workflows/trivy.yml
+++ b/.github/workflows/trivy.yml
@@ -29,7 +29,7 @@ jobs:
           - component: renderer
             build_path: components/renderer
             docker_file: Dockerfile
-          - component: server
+          - component: external_server
             build_path: components
             docker_file: external_server/Dockerfile
     steps:
