--- a/components/external_server/requirements/requirements-dev.in
+++ b/components/external_server/requirements/requirements-dev.in
@@ -1,3 +1,3 @@
--r ../../../requirements/requirements-dev.in
+-r ../../../requirements/dev.in
 -r ../../../requirements/types-requests.in
 types-cryptography==3.3.15
