--- a/tests/feature_tests/requirements/requirements-dev.in
+++ b/tests/feature_tests/requirements/requirements-dev.in
@@ -1,4 +1,4 @@
--r ../../../requirements/requirements-dev.in
+-r ../../../requirements/dev.in
 -r ../../../requirements/types-requests.in
 asserts==0.11.1
 behave==1.2.6
