--- a/components/frontend/package.json
+++ b/components/frontend/package.json
@@ -1,6 +1,6 @@
 {
   "name": "quality-time-app",
-  "version": "3.37.0",
+  "version": "4.0.0-rc.1",
   "private": true,
   "proxy": "http://localhost:5001",
   "dependencies": {
