Fix GitHub release action to build both the external and the internal server component.

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -57,7 +57,14 @@ jobs:
         with:
           context: components
           file: components/external_server/Dockerfile
-          tags: ictu/quality-time_server:${{ steps.get_version.outputs.version }}
+          tags: ictu/quality-time_external_server:${{ steps.get_version.outputs.version }}
+          push: true
+      - name: Push Internal Server to Docker Hub
+        uses: docker/build-push-action@v3.0.0
+        with:
+          context: components
+          file: components/internal_server/Dockerfile
+          tags: ictu/quality-time_internal_server:${{ steps.get_version.outputs.version }}
           push: true
       - name: Push Frontend to Docker Hub
         uses: docker/build-push-action@v3.0.0
