--- a/components/shared_python/setup.cfg
+++ b/components/shared_python/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 name = shared_python
-version = 4.0.0-rc.4
+version = 4.0.0
 author = Erik Verboom
 author_email = erik.verboom@ictu.nl
 url = https://github.com/ICTU/quality-time
