--- a/components/frontend/package.json
+++ b/components/frontend/package.json
@@ -2,7 +2,7 @@
   "name": "quality-time-app",
   "version": "4.2.0",
   "private": true,
-  "proxy": "http://localhost:5001",
+  "proxy": "http://127.0.0.1:5001",
   "dependencies": {
     "fomantic-ui-css": "github:peacekeeper/Fomantic-UI-CSS.git#c94ff9bd5ab897cd3e3facd2c968090da8755dcb",
     "history": "^5.3.0",
