--- a/components/frontend/package.json
+++ b/components/frontend/package.json
@@ -14,6 +14,7 @@
     "react-hash-link": "1.0.1",
     "react-timeago": "^7.1.0",
     "react-toastify": "^9.0.5",
+    "react-uid": "^2.3.2",
     "semantic-ui-calendar-react-17": "^0.16.1",
     "semantic-ui-react": "^2.1.3",
     "victory": "^36.5.3"
