--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -84,6 +84,8 @@ jobs:
           ./tests/feature_tests/ci/test.sh
       - store_artifacts:
           path: build
+    # The resource_class feature allows configuring CPU and RAM resources for each job. Different resource classes are available for different executors. https://circleci.com/docs/2.0/configuration-reference/#resourceclass
+    resource_class: large
 
 workflows:
   version: 2
