Use shared data model in shared python.

--- a/components/shared_python/setup.cfg
+++ b/components/shared_python/setup.cfg
@@ -45,3 +45,6 @@ ignore_missing_imports = true
 
 [mypy-bottle]
 ignore_missing_imports = true
+
+[mypy-shared_data_model]
+ignore_missing_imports = true
