--- a/components/collector/setup.cfg
+++ b/components/collector/setup.cfg
@@ -30,3 +30,6 @@ ignore_missing_imports = true
 
 [mypy-urllib3]
 ignore_missing_imports = true
+
+[mypy-shared_data_model]
+ignore_missing_imports = true
