--- a/components/notifier/setup.cfg
+++ b/components/notifier/setup.cfg
@@ -14,3 +14,6 @@ warn_unused_ignores = true
 
 [mypy-pymsteams]
 ignore_missing_imports = true
+
+[mypy-shared_data_model]
+ignore_missing_imports = true
