Fix Docker compose and Dockerfiles.

--- a/components/notifier/Dockerfile
+++ b/components/notifier/Dockerfile
@@ -4,10 +4,13 @@ WORKDIR /home/notifier
 
 RUN python -m venv venv
 ENV PATH="/home/notifier/venv/bin:$PATH"
-COPY requirements/requirements-base.txt /requirements-base.txt
+COPY notifier/requirements/requirements-base.txt /requirements-base.txt
 RUN pip install --no-cache-dir --require-hashes -r /requirements-base.txt
-COPY requirements/requirements.txt /requirements.txt
+COPY notifier/requirements/requirements.txt /requirements.txt
 RUN pip install --no-cache-dir --require-hashes -r /requirements.txt
+COPY shared_data_model /home/shared_data_model/
+COPY notifier/requirements/requirements-internal.txt /requirements-internal.txt
+RUN pip install --no-cache-dir -r /requirements-internal.txt
 
 FROM python:3.10.5-bullseye
 
@@ -21,7 +24,8 @@ USER notifier
 HEALTHCHECK CMD python -c "from datetime import datetime as dt, timedelta; import sys; sys.exit(dt.now() - dt.fromisoformat(open('/home/notifier/health_check.txt', encoding='utf-8').read().strip()) > timedelta(seconds=600))"
 
 COPY --from=compile-image /home/notifier/venv /home/notifier/venv
-COPY src /home/notifier
+COPY notifier/src /home/notifier
+COPY shared_data_model /home/shared_data_model
 
 ENV PATH="/home/notifier/venv/bin:$PATH"
 CMD ["python", "/home/notifier/quality_time_notifier.py"]
