Use machine executor so we can use vale in Docker.

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -40,8 +40,8 @@ jobs:
           npm test
 
   unittest_docs:
-    docker:
-      - image: cimg/python:3.10.5-node
+    machine:
+      image: ubuntu-2204:2022.04.2
     steps:
       - checkout
       - run: |
