--- a/components/database/Dockerfile
+++ b/components/database/Dockerfile
@@ -1,4 +1,4 @@
 FROM mongo:5.0.9
 
-LABEL maintainer="Frank Niessink <frank.niessink@ictu.nl>"
+LABEL maintainer="Quality-time team <Quality-time@ictu.nl>"
 LABEL description="Quality-time database"
