--- a/components/ldap/Dockerfile
+++ b/components/ldap/Dockerfile
@@ -1,6 +1,6 @@
 FROM osixia/openldap:1.5.0
 
-LABEL maintainer="Frank Niessink <frank.niessink@ictu.nl>"
+LABEL maintainer="Quality-time team <Quality-time@ictu.nl>"
 LABEL description="Quality-time test LDAP server"
 
 COPY bootstrap /container/service/slapd/assets/config/bootstrap
