--- a/components/shared_data_model/setup.cfg
+++ b/components/shared_data_model/setup.cfg
@@ -1,8 +1,8 @@
 [metadata]
 name = shared_data_model
 version = 4.2.0-rc.3
-author = Erik Verboom
-author_email = erik.verboom@ictu.nl
+author = Quality-time team
+author_email = Quality-time@ictu.nl
 url = https://github.com/ICTU/quality-time
 project_urls =
     docs = https://quality-time.readthedocs.io/en/latest/
