Use lower case for email address.

--- a/components/proxy/Dockerfile
+++ b/components/proxy/Dockerfile
@@ -1,6 +1,6 @@
 FROM nginx:1.23.1
 
-LABEL maintainer="Quality-time team <Quality-time@ictu.nl>"
+LABEL maintainer="Quality-time team <quality-time@ictu.nl>"
 LABEL description="Quality-time proxy"
 
 ENV FRONTEND_HOST frontend
