--- a/components/shared_data_model/setup.cfg
+++ b/components/shared_data_model/setup.cfg
@@ -2,7 +2,7 @@
 name = shared_data_model
 version = 4.2.0-rc.3
 author = Quality-time team
-author_email = Quality-time@ictu.nl
+author_email = quality-time@ictu.nl
 url = https://github.com/ICTU/quality-time
 project_urls =
     docs = https://quality-time.readthedocs.io/en/latest/
