--- a/components/collector/Dockerfile
+++ b/components/collector/Dockerfile
@@ -14,7 +14,7 @@ RUN pip install --no-cache-dir -r /requirements-internal.txt
 
 FROM python:3.10.5-bullseye
 
-LABEL maintainer="Quality-time team <Quality-time@ictu.nl>"
+LABEL maintainer="Quality-time team <quality-time@ictu.nl>"
 LABEL description="Quality-time collector"
 
 RUN useradd --create-home collector
