--- a/components/renderer/Dockerfile
+++ b/components/renderer/Dockerfile
@@ -1,6 +1,6 @@
 FROM node:16.16.0-alpine3.15
 
-LABEL maintainer="Quality-time team <Quality-time@ictu.nl>"
+LABEL maintainer="Quality-time team <quality-time@ictu.nl>"
 LABEL description="Quality-time PDF render service"
 
 RUN apk --no-cache add curl=~7.80
