--- a/components/testdata/Dockerfile
+++ b/components/testdata/Dockerfile
@@ -1,6 +1,6 @@
 FROM python:3.10.5-slim-bullseye
 
-LABEL maintainer="Quality-time team <Quality-time@ictu.nl>"
+LABEL maintainer="Quality-time team <quality-time@ictu.nl>"
 LABEL description="Quality-time testdata"
 
 WORKDIR /work
