Use the Quality-time team email address as point of contact where pos… (#4234)
* Use the Quality-time team email address as point of contact where possible/allowed.

--- a/components/collector/Dockerfile
+++ b/components/collector/Dockerfile
@@ -14,7 +14,7 @@ RUN pip install --no-cache-dir -r /requirements-internal.txt
 
 FROM python:3.10.5-bullseye
 
-LABEL maintainer="Frank Niessink <frank.niessink@ictu.nl>"
+LABEL maintainer="Quality-time team <quality-time@ictu.nl>"
 LABEL description="Quality-time collector"
 
 RUN useradd --create-home collector
