--- a/components/internal_server/Dockerfile
+++ b/components/internal_server/Dockerfile
@@ -10,7 +10,7 @@ COPY internal_server/requirements/requirements.txt /requirements.txt
 RUN pip install --no-cache-dir --require-hashes -r /requirements.txt
 COPY internal_server/requirements/requirements-internal.txt /requirements-internal.txt
 COPY shared_data_model /home/shared_data_model/
-COPY shared_python /home/shared_python/
+COPY shared_server_code /home/shared_server_code/
 RUN pip install --no-cache-dir -r /requirements-internal.txt
 
 FROM python:3.10.5-bullseye
@@ -32,7 +32,7 @@ HEALTHCHECK CMD curl -f http://localhost:${INTERNAL_SERVER_PORT:-5002}/api/healt
 COPY --from=compile-image /home/server/venv /home/server/venv
 COPY internal_server/src /home/server
 COPY shared_data_model /home/shared_data_model
-COPY shared_python /home/shared_python
+COPY shared_server_code /home/shared_server_code
 
 ENV PATH="/home/server/venv/bin:$PATH"
 CMD ["python", "/home/server/quality_time_server.py"]
