--- a/components/shared_server_code/setup.cfg
+++ b/components/shared_server_code/setup.cfg
@@ -1,5 +1,5 @@
 [metadata]
-name = shared_python
+name = shared_server_code
 version = 4.2.0-rc.3
 author = Quality-time team
 author_email = quality-time@ictu.nl
