--- a/.github/workflows/shared_python.yml
+++ b/.github/workflows/shared_python.yml
@@ -1,4 +1,4 @@
-name: Shared Python
+name: Shared Server Code
 
 on: [push]
 
@@ -15,13 +15,13 @@ jobs:
         python-version: '3.10'
     - name: Install dependencies
       run: |
-        cd components/shared_python
+        cd components/shared_server_code
         ci/pip-install.sh
     - name: Test
       run: |
-        cd components/shared_python
+        cd components/shared_server_code
         ci/unittest.sh
     - name: Quality
       run: |
-        cd components/shared_python
+        cd components/shared_server_code
         ci/quality.sh
