--- a/.github/workflows/application-tests.yml
+++ b/.github/workflows/application-tests.yml
@@ -8,7 +8,7 @@ jobs:
     runs-on: ubuntu-latest
 
     env:
-      QUALITY_TIME_VERSION: v4.2.0-rc.5
+      QUALITY_TIME_VERSION: v4.2.0
       ENV: ci
       COMPOSE_PATH_SEPARATOR: ":"
       COMPOSE_FILE: docker/docker-compose.yml:docker/docker-compose.ci.yml
